codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ PFTerminal (v0.1.1)                                         │
│                                                                 │
│  Model:            gpt-5.1-codex-max                            │
│  Model provider:   Ambient                                      │
│  Directory: [[workspace]]                                       │
│  Permissions:      Profile locked (read-only, Ask for approval) │
│  Agents.md:        <none>                                       │
│                                                                 │
│  Token usage:      0 total  (0 input + 0 output)                │
│  Context window:   100% left (0 used / 272K)                    │
│  Limits:           data not available yet                       │
╰─────────────────────────────────────────────────────────────────╯
